# wofost-data-assimilation

./: README.md  pyproject.toml
notebooks/: cache_forecast.hdf5  darts.ipynb  data.txt  gaussian.hdf5  gaussian.toml  goppy.ipynb  iterative_ensemble_smoother.ipynb  lorenz63-x.ssv  lorenz63-y.ssv  lorenz63-z.ssv  lorenz63_forecast.hdf5  lorenz63_forecast.toml  lorenz63_forecast_regularised.toml  lorenz63_regularised.hdf5  lorenz63_simulate.toml  model.py  pcse_enkf.ipynb  pcse_enkf_multistate.ipynb  pyEDM .ipynb  pyesmda.ipynb  pykalman.ipynb  pypfilt.ipynb  river.ipynb  serial_hybrid.ipynb  sktime.ipynb  wofost.toml
