[tool.poetry]
name = "wofost-data-assimilation"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@noreply>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pcse = "^5.5.6"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
sqlalchemy = "<2.0"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
river = "^0.21.1"
sktime = "^0.29.0"
stonesoup = "^1.2"
statsmodels = "^0.14.2"
mapie = "^0.8.3"
pyesmda = "^0.4.3"
iterative-ensemble-smoother = "^0.2.6"
goppy = "^1.1.1"
sysidentpy = "<0.3.4"
pykalman = "^0.9.7"
numba = "^0.59.1"
pyedm = "^2.0.1"
pypfilt = {extras = ["plot"], version = "^0.8.3"}


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"
jupyterlab = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
